--- a/src/app/components/activate-success/activate-success.component.html
+++ b/src/app/components/activate-success/activate-success.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="activate-warranty">
     <div class="banner">
         <img src="assets/image/banner/banner.png" alt="" />
@@ -114,6 +115,7 @@
             <button
                 pButton
                 pRipple
+                (click)="warrantyRequest()"
                 type="button"
                 label="Tạo yêu cầu bảo hành"
                 class="flex-1"
