--- a/src/app/components/warranty-mb/warranty-mb.component.html
+++ b/src/app/components/warranty-mb/warranty-mb.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <h1>KÍCH HOẠT BẢO HÀNH</h1>
             </div>
-            <div class="warranty-item">
+            <div class="warranty-item" [routerLink]="'/warranty-lookup'">
                 <div class="warranty-item-img">
                     <img src="assets/image/warranty/guarantee.png" alt="" />
                 </div>
