--- a/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -3670,7 +3670,7 @@
     color: #4b5563;
     border-radius: 4px;
     padding:0.5rem;
-    height:150px;
+    min-height:150px;
   }
 
   .p-tree-empty-message{
@@ -6582,4 +6582,8 @@ ol{
 
 .p-autocomplete{
     width: 100% !important;
+}
+
+.permissions{
+    
 }
