--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -128,27 +128,39 @@
                     inputId="binary"
                   ></p-checkbox>
                 </th> -->
-                <th style="width: 10%">Ảnh</th>
-                <th style="width: 17%">Sản phẩm</th>
-                <th style="width: 15%">Phân loại hàng</th>
-                <th style="width: 10%; text-align: right">Giá bán</th>
-                <th style="width: 7%; text-align: right">Tồn kho</th>
-                <th style="width: 10%; text-align: center">Trạng thái</th>
-                <th style="width: 12%; text-align: center">Thương hiệu</th>
-                <th style="width: 13%; text-align: center">Ngày tạo</th>
-                <th style="width: 20%; text-align: center">Thao tác</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-product class="row">
-              <tr
-                style="
-                  border-bottom: 1px solid #d9d9d9;
-                  height: 100%;
-                  overflow: visible;
-                  position: relative;
-                "
-              >
-                <!-- <td style="padding-left: 20px">
+                            <th style="width: 10%">Ảnh</th>
+                            <th style="width: 17%">Sản phẩm</th>
+                            <th style="width: 15%">Phân loại hàng</th>
+                            <th style="width: 10%; text-align: right">
+                                Giá bán
+                            </th>
+                            <th style="width: 7%; text-align: right">
+                                Tồn kho
+                            </th>
+                            <th style="width: 10%; text-align: center">
+                                Trạng thái
+                            </th>
+                            <th style="width: 12%; text-align: center">
+                                Thương hiệu
+                            </th>
+                            <th style="width: 13%; text-align: center">
+                                Ngày tạo
+                            </th>
+                            <th style="width: 20%; text-align: center">
+                                Thao tác
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-product class="row">
+                        <tr
+                            style="
+                                border-bottom: 1px solid #d9d9d9;
+                                height: 100%;
+                                overflow: visible;
+                                position: relative;
+                            "
+                        >
+                            <!-- <td style="padding-left: 20px">
                   <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
                 </td> -->
                             <td class="n-image-product">
