--- a/src/app/components/pages/warranty/warranty-request/create/create.component.html
+++ b/src/app/components/pages/warranty/warranty-request/create/create.component.html
@@ -262,6 +262,19 @@
                             style="height: 100%"
                         >
                             <div style="flex: 1">
+                                <label
+                                    class="mb-2"
+                                    style="font-weight: 600"
+                                ></label>
+                                <div class="supplier-select mb-3">
+                                    <label class="mb-2">Chi nhánh</label>
+                                    <p-autoComplete
+                                        [(ngModel)]="selectedItem"
+                                        [suggestions]="suggestions"
+                                        placeholder="Nhập nhà cung cấp"
+                                        (completeMethod)="search($event)"
+                                    />
+                                </div>
                                 <label class="mb-2" style="font-weight: 600"
                                     >Thông tin phiếu yêu cầu</label
                                 >
