--- a/src/app/components/pages/warranty/warranty-lookup/warranty-lookup.component.html
+++ b/src/app/components/pages/warranty/warranty-lookup/warranty-lookup.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="phoneNumberForm" (ngSubmit)="checkWarranty2()">
     <div class="activate-warranty">
         <div class="banner">
-            <img src="assets/image/banner/banner.png" alt="" />
+            <img src="assets/image/banner/banner.png" alt />
         </div>
         <div class="container">
             <div class="back">
@@ -20,22 +20,19 @@
                     <div class="field mb-0">
                         <label
                             style="font-weight: 600; color: #000"
-                            htmlFor="name1"
-                            >Nhập thông tin<span class="red-asterisk"
-                                >*</span
-                            ></label
-                        >
+                            htmlFor="name1">Nhập thông tin<span
+                                class="red-asterisk">*</span></label>
                         <input
                             pInputText
                             id="name1"
                             type="text"
                             formControlName="inputData"
                             spellcheck="false"
-                            placeholder="Nhập số khung/số máy hoặc số điện thoại"
-                        />
-                        <div *ngIf="showErrors" class="error-message" style="color: red;">
+                            (input)="removeWhitespace()"
+                            placeholder="Nhập số khung/số máy hoặc số điện thoại" />
+                        <!-- <div *ngIf="showErrors" class="error-message" style="color: red;">
                             Vui lòng nhập đủ số máy và số khung để kiểm tra!
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -48,8 +45,7 @@
                     severity="secondary"
                     type="submit"
                     label="Kiểm tra"
-                    class="p-button-danger flex-1"
-                ></button>
+                    class="p-button-danger flex-1"></button>
             </div>
             <div class="mt-5">
                 <div *ngIf="customer">
@@ -73,7 +69,7 @@
                 </div>
             </div>
             <div class="mt-5">
-                <div *ngIf="warrantyProducts && warrantyData.length > 0">
+                <div *ngIf="warrantyData.length > 0">
                     <label>THÔNG TIN BẢO HÀNH</label>
                     <div class="warranty-info">
                         <table>
@@ -88,82 +84,45 @@
                                 <tr *ngFor="let product of warrantyData">
                                     <td>
                                         <div>
-                                            <strong>{{
-                                                product.product.name
-                                            }}</strong>
+                                            <strong>{{ product.product.name }}</strong>
                                             <p>
                                                 Số khung:
-                                                {{
-                                                    product
-                                                        .inventoryStockDetailProductImei
-                                                        .frameNumber
-                                                }}
+                                                {{ product.inventoryStockDetailProductImei.frameNumber}}
                                             </p>
                                             <p>
                                                 Số máy:
-                                                {{
-                                                    product
-                                                        .inventoryStockDetailProductImei
-                                                        .engineNumber
-                                                }}
+                                                {{ product.inventoryStockDetailProductImei.engineNumber }}
                                             </p>
                                         </div>
                                     </td>
                                     <td>
                                         <span
                                             *ngIf="
-                                                !product.product.warrantyPolicy
-                                                    .term
-                                            "
-                                            >Không bảo hành
+                                                !product.product.warrantyPolicy?.term
+                                            ">Không bảo hành
                                         </span>
-                                        <span
-                                            >{{
-                                                product.product.warrantyPolicy
-                                                    .term
-                                            }}
+                                        <span>{{  product.product.warrantyPolicy?.term}}
                                         </span>
                                         <span
                                             *ngIf="
-                                                product.product.warrantyPolicy
-                                                    .termType === 1
-                                            "
-                                            >ngày</span
-                                        >
+                                                product.product.warrantyPolicy?.termType === 1
+                                            ">ngày</span>
                                         <span
                                             *ngIf="
-                                                product.product.warrantyPolicy
-                                                    .termType === 2
-                                            "
-                                            >tuần</span
-                                        >
+                                                product.product.warrantyPolicy?.termType === 2
+                                            ">tuần</span>
                                         <span
-                                            *ngIf="
-                                                product.product.warrantyPolicy
-                                                    .termType === 3
-                                            "
-                                            >tháng</span
-                                        >
+                                            *ngIf="product.product.warrantyPolicy?.termType === 3
+                                            ">tháng</span>
                                         <span
-                                            *ngIf="
-                                                product.product.warrantyPolicy
-                                                    .termType === 4
-                                            "
-                                            >quý</span
-                                        >
+                                            *ngIf="product.product.warrantyPolicy?.termType === 4
+                                            ">quý</span>
                                         <span
-                                            *ngIf="
-                                                product.product.warrantyPolicy
-                                                    .termType === 5
-                                            "
-                                            >năm</span
-                                        >
+                                            *ngIf="product.product.warrantyPolicy?.termType === 5
+                                            ">năm</span>
                                     </td>
                                     <td>
-                                        {{
-                                            product.expirationDate
-                                                | date : "dd/MM/yyyy"
-                                        }}
+                                        {{ product.expirationDate| date : "dd/MM/yyyy"}}
                                     </td>
                                 </tr>
                             </tbody>
@@ -173,12 +132,9 @@
             </div>
             <div
                 class="mt-5"
-                *ngIf="isChecked && warrantyData && warrantyData.length === 0"
-            >
-                <label
-                    >Không tìm thấy thông tin bảo hành cho số máy đã
-                    nhập.</label
-                >
+                *ngIf="isChecked && warrantyData && warrantyData.length === 0">
+                <label>Không tìm thấy thông tin bảo hành cho số máy đã
+                    nhập.</label>
             </div>
         </div>
         <footer class="footer">
