--- a/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
+++ b/src/app/components/pages/warehouse/stock-transfer/stock-transfer.component.html
@@ -98,6 +98,8 @@
                                     >Ngày tạo:</label>
                                 <p-calendar
                                     [showIcon]="true"
+                                    [dateFormat]="this.formatdate"
+                                    [showClear]="true"
                                     placeholder="Chọn thời gian"
                                     inputId="icon"
                                 ></p-calendar>
