--- a/src/app/components/activate-success/activate-success.component.html
+++ b/src/app/components/activate-success/activate-success.component.html
@@ -27,7 +27,7 @@
                     <div
                         class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-start"
                     >
-                        {{ warrantyById?.customer?.name }}
+                        {{ warrantyById?.cusSuccess?.name }}
                     </div>
                 </div>
                 <div class="field grid">
@@ -40,7 +40,7 @@
                     <div
                         class="col-12 mb-2 md:col-7 md:mb-0 flex justify-content-start"
                     >
-                        {{ warrantyById?.customer?.phoneNumber }}
+                        {{ warrantyById?.cusSuccess?.phoneNumber }}
                     </div>
                 </div>
                 <div class="field grid">
@@ -55,17 +55,17 @@
                     >
                         <ng-container
                             *ngIf="
-                                warrantyById?.customer?.wardName ||
-                                    warrantyById?.customer.addressDetail ||
-                                    warrantyById?.customer?.districtName ||
-                                    warrantyById?.customer?.cityName;
+                                warrantyById?.cusSuccess?.wardName ||
+                                    warrantyById?.cusSuccess.addressDetail ||
+                                    warrantyById?.cusSuccess?.districtName ||
+                                    warrantyById?.cusSuccess?.cityName;
                                 else noInfo
                             "
                         >
-                            {{ warrantyById?.customer?.addressDetail }},
-                            {{ warrantyById?.customer?.wardName }},
-                            {{ warrantyById?.customer?.districtName }},
-                            {{ warrantyById?.customer?.cityName }}
+                            {{ warrantyById?.cusSuccess?.addressDetail }},
+                            {{ warrantyById?.cusSuccess?.wardName }},
+                            {{ warrantyById?.cusSuccess?.districtName }},
+                            {{ warrantyById?.cusSuccess?.cityName }}
                         </ng-container>
                         <ng-template #noInfo> Chưa có thông tin </ng-template>
                     </div>
